hw-3 amendments: text alignment & card size fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -267,9 +267,6 @@ img {
 
 .team-item {
   background-color: #fff;
-  /* align-items: center;
-  justify-content: center; */
-  /* flex-direction: column; */
   gap: 24px;
   border-radius: 0px 0px 4px 4px;
 }
@@ -285,14 +282,7 @@ img {
   row-gap: 48px;
 }
 
-/* .portfolio-item {
-  width: calc((100% - 48px) / 3);
-} */
-
 .portfolio-card {
-  /* align-items: flex-start;
-  justify-content: center;
-  flex-direction: column; */
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
